crates/sutura-app/tests/snapshots/revenue-by-segment__rows@duckdb.snap
---
source: crates/sutura-app/tests/golden/data_systems.rs
expression: stable(rows)
---
segment	period	revenue
Text(business)	Text(2026-06-01)	Integer(50073)
Text(retail)	Text(2026-06-01)	Integer(419950)
Null	Text(2026-06-01)	Integer(99999)
