crates/sutura-app/tests/snapshots/revenue-by-segment__sql@duckdb.snap
---
source: crates/sutura-app/tests/golden/dialects.rs
expression: query.sql()
---
SELECT "customers"."segment" AS "segment", CAST(DATE_TRUNC('month', "orders"."order_date") AS DATE) AS "period", SUM("orders"."amount_cents") AS "revenue" FROM "orders" LEFT JOIN "customers" ON "orders"."customer_id" = "customers"."id" WHERE "orders"."order_date" >= ? AND "orders"."order_date" < ? GROUP BY "customers"."segment", CAST(DATE_TRUNC('month', "orders"."order_date") AS DATE) ORDER BY "customers"."segment", CAST(DATE_TRUNC('month', "orders"."order_date") AS DATE) LIMIT 10001
